...
) {
    if (appSettingDialogState.showDialog) {
        AppSettingDialog(
            appSettingDialogState = appSettingDialogState,
            packageName = packageName,
            onAddClick = onAddAppSetting,
            contentDescription = "Add App Settings Dialog",
        )
    }

    if (copyPermissionCommandDialogState.showDialog) {
        CopyPermissionCommandDialog(
            copyPermissionCommandDialogState = copyPermissionCommandDialogState,
...
    }

    if (addShortcutDialogState.showDialog) {
        AddShortcutDialog(
            shortcutDialogState = addShortcutDialogState,
            packageName = packageName,
            contentDescription = "Add Shortcut Dialog",
            onAddClick = onAddShortcut,
        )
    }

    if (updateShortcutDialogState.showDialog) {
        UpdateShortcutDialog(
...
        )
    }

    IconButton(onClick = onSettingsIconClick) {
        Icon(
            GetoIcons.Settings,
            contentDescription = "Settings icon",
        )
    }

    IconButton(
        onClick = onShortcutIconClick,
    ) {
...
