package com.android.geto.common

enum class SettingsType(val label: String) {
    SYSTEM("System"), SECURE("Secure"), GLOBAL("Global")
}